[gd_scene load_steps=12 format=3 uid="uid://dyvyu3gkujyo1"]

[ext_resource type="Script" path="res://scripts/campaign/Level1.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Cloud.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://c6vi5nlcotnbi" path="res://scenes/PlayerCampaign.tscn" id="3"]
[ext_resource type="Script" uid="uid://dhscyelwnf6eu" path="res://scripts/HUD.gd" id="4"]
[ext_resource type="Script" path="res://scripts/EnemySpawner.gd" id="5"]
[ext_resource type="PackedScene" path="res://scenes/Enemy_campaign1.tscn" id="6"]
[ext_resource type="PackedScene" path="res://scenes/Boss.tscn" id="7"]
[ext_resource type="Script" uid="uid://dp1vcg7qtvn6d" path="res://scripts/GroundKill.gd" id="8"]
[ext_resource type="Script" uid="uid://c0oexvyibicl7" path="res://scripts/EnemyIndicators.gd" id="9"]
[ext_resource type="Script" uid="uid://budnygyi4uyu2" path="res://scripts/CloudSpawner.gd" id="10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_groundkill"]

[node name="Level1" type="Node2D"]
script = ExtResource("1")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="SkyGradient" type="ColorRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloudContainer" type="Node2D" parent="."]
z_index = -10

[node name="CloudSpawner" type="Node2D" parent="."]
script = ExtResource("10")
cloud_scene = ExtResource("2")

[node name="SpawnPlayer" type="Node2D" parent="."]
position = Vector2(80, 474)

[node name="PlayerCampaign" parent="." instance=ExtResource("3")]
position = Vector2(80, 474)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(335, 360)
limit_top = 0
limit_bottom = 720
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="GroundKill" type="Area2D" parent="."]
script = ExtResource("8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundKill"]
position = Vector2(0, 706)
scale = Vector2(100000, 5)
shape = SubResource("RectangleShape2D_groundkill")

[node name="EnemySpawner" type="Node2D" parent="."]
position = Vector2(1400, 360)
script = ExtResource("5")
enemy_scene = ExtResource("6")
boss_scene = ExtResource("7")
spawn_interval_min = 1.0
spawn_interval_max = 3.33

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("4")

[node name="PlayerHPBar" type="ProgressBar" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -697.0
offset_right = 214.0
offset_bottom = -670.0
grow_vertical = 0
value = 100.0

[node name="EnemyIndicators" type="CanvasLayer" parent="."]
layer = 10
script = ExtResource("9")
